name:                goggles
version:             0.1.0.0
synopsis:            Interface to the Google Cloud APIs
description:         Interface to the Google Cloud APIs
homepage:            https://github.com/ocramz/goggles
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Network.Goggles
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-client-tls
                     , http-types
                     , mtl
                     , transformers
                     , text
                     , bytestring
                     , time
                     , stm
                     , envy
                     , containers
                     , exceptions
  
  

-- executable goggles
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , goggles

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goggles
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/goggles
