name:                goggles
version:             0.1.0.0
synopsis:            Interface to Google Cloud APIs
description:         Interface to Google Cloud APIs
homepage:            https://github.com/ocramz/goggles
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca.marco gmail
copyright:           2017 Marco Zocca
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Network.Goggles
                       Network.Goggles.Cloud
                       Network.Goggles.Storage
                       Network.Goggles.Internal.HTTP
                       Network.Goggles.Auth
                       Network.Goggles.Auth.TokenExchange                       
                       Network.Goggles.Experimental
                       Network.Utils.HTTP
  other-modules:       Data.Keys
                       Network.Goggles.Internal.Auth.JWT
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , scientific
                     , attoparsec
                     , aeson
                     , microlens
                     , microlens-aeson
                     , req >= 0.3
                     , http-client
                     , http-client-tls
                     , http-types
                     , mime-types
                     , cryptonite
                     , pem
                     , asn1-types
                     , asn1-encoding
                     , x509
                     , x509-store
                     , unix-time
                     , mtl
                     , transformers
                     , text
                     , bytestring
                     , base64-bytestring
                     , time
                     , stm
                     -- , envy
                     , containers
                     , unordered-containers
                     , exceptions
                     , filepath
                     , retry
                     , logging-effect
                     , data-default
                     -- * DEBUG
                     , hspec
                     , QuickCheck
  
  

-- executable goggles
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , goggles

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , goggles
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/goggles
